# ModelViewer

./: .gitignore  CMakeLists.txt
include/: Mesh.h  Model.h  RenderWidget.h  RenderWindow.h  Shader.h  Texture.h  Vertex.h
model/cylinder/: cylinder.mtl
shader/: Fragment.glsl  FragmentShader.glsl  Vertex.glsl  VertexShader.glsl
src/: Animation.cpp  Animation.hpp  Bone.cpp  Bone.hpp  BoneInfo.cpp  BoneInfo.hpp  BoneNode.cpp  BoneNode.hpp  Image.cpp  Image.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  RenderWidget.cpp  RenderWindow.cpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  TransformationHelper.hpp  TypeHelper.hpp  Vertex.cpp  Vertex.hpp  Viewer.cpp  Viewer.hpp  main.cpp
